--- a/glef/glef.vcxproj
+++ b/glef/glef.vcxproj
@@ -148,6 +148,7 @@
   <ItemGroup>
     <ClInclude Include="common\commonIncludes.h" />
     <ClInclude Include="common\shader.hpp" />
+    <ClInclude Include="GlefCamera.hpp" />
     <ClInclude Include="Glef.hpp" />
     <ClInclude Include="GlefCollor.hpp" />
     <ClInclude Include="GlefEnums.hpp" />
